--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,14 +5,51 @@
   <meta charset="UTF-8">
   <title>FriendFinder</title>
 
-  <!-- Latest compiled and minified CSS & JS -->
+  <!-- CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-  <!-- Font Awesome Glyphicons -->
+  <!-- Fonts & Glyphicons -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+<style>
+    body{
+          /* background-color:rgba(78, 78, 80, 0.6); */
+          /* background-attachment: */
+          background: linear-gradient( #6f2232, #1a1a1d);
+          background-size: 100%;
+          overflow: auto;
+          color: white;
+          margin: 30px;
+          font-family: 'Raleway', sans-serif;
+          border-radius: 15px;
+      }
+      h1{
+        /* text-align: center; */
+        color: white;
+        /* font-weight:bolder; */
+        letter-spacing: 4px;
 
+      }
+      /* footer{
+           background-color:#1a1a1d; 
+      } */
+      .jumbotron{
+        background-color: #1a1a1d;
+      }
+      #survey-button{
+          background-color: #6f2232;
+          color: white;
+      }
+      h2{
+        color: #d6b1b4;
+      }
+      a{
+          color: #aa3e54;
+      }
+
+</style>
 </head>
 
 <body>
@@ -20,17 +57,22 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder (Meme Edition)</h1>
+        <h1>
+          <i class="glyphicon glyphicon-heart-empty" aria-hidden="true"></i> 
+          Friend Finder 
+        </h1>
+        <h1>(Meme Edition)</h1>
       <hr>
-      <h2>Answer a few very important questions</h2>
-      <h2>And find your best match and their favorite meme!</h2>
-      <br>
+        <h2>Don't worry so much about what they look like...</h2>
+        <h2>Find your best match and judge them by their favorite meme!</h2>
+        <br>
 
       <div>
-        <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
+        <a href="/survey"><button type="button" class="btn btn-lg" id="survey-button"><h4><span class="glyphicon glyphicon-pencil"></span> Go to Survey</h4></button></a>
       </div>
 
     </div>
+
 
     <footer class="footer">
       <div class="container">
