--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,5 +1,4 @@
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>FriendFinder</title>
@@ -10,31 +9,108 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
   <!-- Font Awesome Glyphicons -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
   <!-- Chosen -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+  <style>
+      /* colors:
+        dark #1a1a1d
+        light #4e4e50
+        darkest red #6f2232
+        lighter #aa3e54
+        mid #950740
+        brightest #c3073f
+        lightest #e5c2ca
+
+        */
+
+      body{
+          /* background-color:rgba(78, 78, 80, 0.6); */
+          background-attachment: fixed;
+          background: linear-gradient( #1a1a1d, #6f2232);
+          overflow: auto;
+          color: #d6b1b4;;
+          margin: 30px;
+          font-family: 'Raleway', sans-serif;
+          border-radius: 15px;
+      }
+      #survey-title{
+        text-align: center;
+        color: white;
+        /* font-weight:bolder; */
+        letter-spacing: 4px;
+
+      }
+      #about-box{
+          /* background-color:#6f2232;
+          color:#d6b1b4; */
+          padding: 30px;
+      }
+      #about-you{
+        color: white;
+      }
+      strong{
+          font-weight:normal;
+          letter-spacing: 3px;
+          color: white;
+      }
+      .chosen-select{
+          color:rgb(24, 2, 31)
+      }
+      #main-container{
+        padding: 30px;
+        background: linear-gradient( #6f2231a4, #1a1a1dc0);
+        color:#d6b1b4;
+        border-radius: 15px;
+      }
+      button{
+          background-color: #6f2232;
+          color: white;
+      }
+      a{
+          color: #aa3e54;
+      }
+      #submit{
+        background-color: #6f2232;
+        color: white;
+      }
+      #results-modal{
+        /* background-color:rgba(34, 7, 11, 0.6); */
+        color: #1a1a1d;
+        border-radius: 15px;
+      }
+      #match-image, #match-meme{
+          width: 80%;
+          object-fit: cover;
+      }
+      #modal-title{
+        color: #6f2231a4;
+        
+      }
+  </style>
 
 </head>
 
 <body>
 
-  <div class="container">
+  <div class="container" id="main-container">
 
-    <h2>Survey Questions</h2>
+    <h2 id="survey-title">Survey Questions</h2>
     <hr>
+    <div id="about-box">
+        <h3 id="about-you"><strong>About You</strong></h3>
+        <h4>Name (Required)</h4>
+        <input type="text" id="name" class="form-control" required>
 
-    <h3><strong>About You</strong></h3>
-    <h4>Name (Required)</h4>
-    <input type="text" id="name" class="form-control" required>
+        <h4>Link to Photo Image (Required)</h4>
+        <input type="text" id="photo" class="form-control" required>
 
-    <h4>Link to Photo Image (Required)</h4>
-    <input type="text" id="photo" class="form-control" required>
-
-    <h4>Link to Favorite Meme (Required)</h4>
-    <input type="text" id="meme" class="form-control" required>
-
+        <h4>Link to Favorite Meme (Required)</h4>
+        <input type="text" id="meme" class="form-control" required>
+    </div>
     <hr>
 
     <h3><strong>Question 1</strong></h3>
@@ -156,7 +232,7 @@
     <br>
 
     <!-- Submit Button -->
-    <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
+    <button type="submit" class="btn btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>
      Submit</button>
 
     <hr>
@@ -176,12 +252,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h2 class="modal-title"><strong>Best Match</strong></h2>
+          <h2 class="modal-title"><strong id="modal-title">Best Match</strong></h2>
         </div>
         <div class="modal-body">
           <h2 id="match-name"></h2>
-          <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
-          <img id="match-meme" src="https://i.chzbgr.com/full/9018936832/h14D75CED/" alt="">
+          <img class="w-75 p-3" id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="" width="500">
+          <img class="w-75 p-3" id="match-meme" src="https://i.chzbgr.com/full/9018936832/h14D75CED/" alt="" width="500">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
